<resources>
    <string name="app_name">LeadCapture</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_your_code">Please enter your Code</string>
    <string name="license_code">License Code</string>
    <string name="dont_have_license_code">Don’t have License Code?</string>
    <string name="license_code_sent">License code Sent</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="empty_license_code_field">License code is empty</string>
    <string name="invalid_email_msg">Please enter valid email</string>
    <string name="license_not_found">License code not found</string>
    <string name="email_address">Email address</string>
    <string name="resend_code">Resend Code</string>
    <string name="send_code">Send Code</string>
    <string name="eva_save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="eva_discard">Discard</string>
    <string name="submit">Submit</string>
    <string name="sent">Sent</string>
    <string name="got_it">Got it</string>
    <string name="home">Home</string>
    <string name="add_lead">Add Lead</string>
    <string name="eva_appointment">Appointment</string>
    <string name="lead_recording_heading">Add Lead Recording</string>
    <string name="lead_recording_msg">Would you like to save this recording and link it to a lead record, save without lead?</string>
    <string name="add_to_lead_record">Add to Lead Record</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="license_code_msg">Please Enter your email to receive an license code.</string>
    <string name="license_code_sent_msg">Your license code has been sent to your \nregistered email address.</string>
    <string name="event_activation_msg">Each code can only be used on one device at a time. If \nthis code is active on another device, please sign out \nfrom there to continue.</string>
    <string name="save_lead">Save Lead</string>
    <string name="book_appointment_heading">Book Appointment?</string>
    <string name="eva_schedule_appointment_msg">Would you like to schedule an appointment with this attendee?</string>
    <string name="doing_good_msg">You are doing good</string>
    <string name="no_lead_yet">No Lead Yet</string>
    <string name="eva_stop_recording">Stop Recording</string>
    <string name="eva_stop_record_msg">Do you want to save this recording or discard it?</string>
    <string name="eva_sign_out">Sign Out</string>
    <string name="sign_out_header">Are you sure you want to Sign out?</string>
    <string name="sign_out_subheading">After signing out, this device will no longer be active.</string>
    <string name="save_without_lead">Save without Lead</string>
    <string name="save_confirmation_lead">Would you like to save lead?</string>
    <string name="internet_not_available">Internet not available</string>
    <string name="eva_access_qr">Access with QR</string>
    <string name="eva_select_time">Select Time</string>
    <string name="eva_select_date">Select Date</string>
    <string name="eva_choose_mode">Choose Mode</string>
    <string name="eva_in_person">In Person</string>
    <string name="eva_virtual">Virtual</string>
    <string name="eva_subject">Subject</string>
    <string name="eva_subject_hint">Enter subject</string>
    <string name="eva_book_appointment">Book Appointment</string>
    <string name="eva_view_detail">View Details</string>
    <string name="eva_add_calendar">Add To Calendar</string>
    <string name="eva_reschedule">Reschedule</string>
</resources>