<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvLicenseCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_bold"
        android:gravity="center"
        android:text="@string/dont_have_license_code"
        android:textColor="@color/heading_text_color"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEnterRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:fontFamily="@font/sf_pro_regular"
        android:gravity="center"
        android:text="@string/license_code_msg"
        android:textColor="@color/heading_text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/tvLicenseCode"
        app:layout_constraintStart_toStartOf="@id/tvLicenseCode"
        app:layout_constraintTop_toBottomOf="@id/tvLicenseCode" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:fontFamily="@font/sf_pro_regular"
        android:text="@string/email_address"
        android:textColor="@color/subheading_text_color"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/tvEnterRegistration"
        app:layout_constraintTop_toBottomOf="@id/tvEnterRegistration" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@drawable/bg_input_rounded"
        android:padding="3dp"
        app:boxStrokeColor="@color/primary_color"
        app:hintEnabled="false"
        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/enter_email_address"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/heading_text_color"
            android:textColorHint="@color/subheading_text_color"
            android:textSize="14sp"
            app:hintTextColor="@color/subheading_text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/primary_color"
        android:fontFamily="@font/sf_pro_regular"
        android:text="@string/sent"
        android:textColor="@color/screen_bg_color"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@id/emailInputLayout"
        app:layout_constraintStart_toStartOf="@id/emailInputLayout"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout" />

    <TextView
        android:id="@+id/tvMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:fontFamily="@font/sf_pro_regular"
        android:gravity="center"
        android:text="@string/license_code_msg"
        android:textColor="@color/primary_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/tvLicenseCode"
        app:layout_constraintStart_toStartOf="@id/tvLicenseCode"
        app:layout_constraintTop_toBottomOf="@id/btnSent" />

</androidx.constraintlayout.widget.ConstraintLayout>