<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_circle"
        android:backgroundTint="#EDF1F3"
        android:padding="8dp"
        android:src="@drawable/ic_cross"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_bold"
        android:gravity="center"
        android:text="@string/lead_recording_heading"
        android:textColor="@color/heading_text_color"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvSubHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/sf_pro_regular"
        android:gravity="center"
        android:lineHeight="23dp"
        android:text="@string/lead_recording_msg"
        android:textColor="@color/subheading_text_color"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@id/tvHeading"
        app:layout_constraintStart_toStartOf="@id/tvHeading"
        app:layout_constraintTop_toBottomOf="@id/tvHeading" />

    <TextView
        android:id="@+id/tvLeadRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sf_pro_regular"
        android:text="@string/add_to_lead_record"
        android:textColor="@color/subheading_text_color"
        android:textSize="13dp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/tvSubHeading"
        app:layout_constraintTop_toBottomOf="@id/tvSubHeading" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLeadDropDown"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@drawable/bg_input_rounded"
        app:boxBackgroundColor="@color/subheading_text_color"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/black"
        app:endIconDrawable="@drawable/ic_dropdown"
        app:endIconMode="dropdown_menu"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@id/ivIcon"
        app:layout_constraintStart_toStartOf="@id/tvSubHeading"
        app:layout_constraintTop_toBottomOf="@id/tvLeadRecord">

        <AutoCompleteTextView
            android:id="@+id/actvLeadDropDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/sf_pro_regular"
            android:hint="Select Lead"
            android:inputType="none"
            android:textColor="@color/heading_text_color"
            android:textColorHint="@color/subheading_text_color"
            android:textSize="13sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvPrimaryBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_primary_stroke"
        android:backgroundTint="@drawable/enable_disable_selector_with_alpha"
        android:enabled="false"
        android:fontFamily="@font/sf_pro_regular"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/add_lead"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilLeadDropDown" />

    <TextView
        android:id="@+id/tvSecondaryBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_primary_stroke"
        android:fontFamily="@font/sf_pro_regular"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/save_without_lead"
        android:textColor="@color/primary_color"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPrimaryBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>