<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg_color"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnSave"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/incToolbar"
                layout="@layout/toolbar_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvLeadRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/sf_pro_regular"
                android:text="Lead Name"
                android:textColor="@color/subheading_text_color"
                android:textSize="13sp"
                android:textStyle="normal"
                app:layout_constraintTop_toBottomOf="@id/incToolbar" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLeadDropDown"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@drawable/bg_input_rounded"
                app:boxBackgroundColor="@color/subheading_text_color"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/black"
                app:endIconDrawable="@drawable/ic_dropdown"
                app:endIconMode="dropdown_menu"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="@id/tvLeadRecord"
                app:layout_constraintStart_toStartOf="@id/tvLeadRecord"
                app:layout_constraintTop_toBottomOf="@id/tvLeadRecord">

                <AutoCompleteTextView
                    android:id="@+id/actvLeadDropDown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/sf_pro_regular"
                    android:hint="Select Lead"
                    android:inputType="none"
                    android:textColor="@color/heading_text_color"
                    android:textColorHint="@color/light_grey"
                    android:textSize="13sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/sf_pro_regular"
                android:text="Email"
                android:textColor="@color/subheading_text_color"
                android:textSize="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilLeadDropDown" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_input_rounded"
                android:hint="james@gmail.com"
                android:padding="18dp"
                android:textColor="@color/heading_text_color"
                android:textColorHint="@color/light_grey"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="@id/tvEmail"
                app:layout_constraintStart_toStartOf="@id/tvEmail"
                app:layout_constraintTop_toBottomOf="@id/tvEmail" />

            <TextView
                android:id="@+id/tvChooseMode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/sf_pro_regular"
                android:text="@string/eva_choose_mode"
                android:textColor="@color/subheading_text_color"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEmail" />

            <RadioGroup
                android:id="@+id/rgMode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/tvChooseMode"
                app:layout_constraintStart_toStartOf="@+id/tvChooseMode"
                app:layout_constraintTop_toBottomOf="@id/tvChooseMode">

                <RadioButton
                    android:id="@+id/rbInPerson"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_radio_selector"
                    android:button="@android:color/transparent"
                    android:checked="true"
                    android:drawableEnd="@drawable/radio_btn_selector_2"
                    android:fontFamily="@font/sf_pro_regular"
                    android:paddingHorizontal="20dp"
                    android:text="@string/eva_in_person"
                    android:textColor="@drawable/checked_black_grey_selector" />

                <RadioButton
                    android:id="@+id/rbVirtual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_radio_selector"
                    android:button="@android:color/transparent"
                    android:drawableEnd="@drawable/radio_btn_selector_2"
                    android:fontFamily="@font/sf_pro_regular"
                    android:paddingHorizontal="20dp"
                    android:text="@string/eva_virtual"
                    android:textColor="@drawable/checked_black_grey_selector" />

            </RadioGroup>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llcLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rgMode">

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_regular"
                    android:text="Location"
                    android:textColor="@color/subheading_text_color"
                    android:textSize="13dp" />

                <EditText
                    android:id="@+id/etLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_input_rounded"
                    android:hint="Enter Location"
                    android:padding="18dp"
                    android:textColor="@color/heading_text_color"
                    android:textColorHint="@color/light_grey"
                    android:textSize="13sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llcAppointmentTimeSlot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_input_rounded"
                android:orientation="vertical"
                android:paddingVertical="15dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llcLocation">

                <!--        <androidx.appcompat.widget.LinearLayoutCompat-->
                <!--            android:layout_width="match_parent"-->
                <!--            android:layout_height="match_parent"-->
                <!--            android:orientation="vertical"-->
                <!--            android:padding="7dp">-->

                <!--            -->

                <!--        </androidx.appcompat.widget.LinearLayoutCompat>-->

                <TextView
                    android:id="@+id/tvDateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/sf_pro_medium"
                    android:text="@string/eva_select_date"
                    android:textColor="@color/heading_text_color"
                    android:textSize="13sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvDatesList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_date_tile" />

                <TextView
                    android:id="@+id/tvTimeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/sf_pro_medium"
                    android:text="@string/eva_select_time"
                    android:textColor="@color/heading_text_color"
                    android:textSize="13sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTimeSlots"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginTop="7dp"
                    android:clipToPadding="false"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="3"
                    tools:listitem="@layout/item_radio_btn" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llcSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llcAppointmentTimeSlot">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_regular"
                    android:text="@string/eva_subject"
                    android:textColor="@color/subheading_text_color"
                    android:textSize="13dp" />

                <EditText
                    android:id="@+id/etSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_input_rounded"
                    android:gravity="start"
                    android:hint="@string/eva_subject_hint"
                    android:minHeight="100dp"
                    android:paddingHorizontal="18dp"
                    android:paddingVertical="15dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/heading_text_color"
                    android:textColorHint="@color/light_grey"
                    android:textSize="13sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:backgroundTint="@color/primary_color"
        android:fontFamily="@font/sf_pro_medium"
        android:text="@string/eva_book_appointment"
        android:textColor="@color/screen_bg_color"
        android:textSize="16dp"
        android:textStyle="bold" />

</RelativeLayout>